--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </li>
 
           <li class="facebook">
-            <a href="https://facebook.com/welingtonap" target="_blank">
+            <a href="https://www.linkedin.com/in/welington-aparecido-9285251b5/" target="_blank">
               <img src="images/facebook.svg" alt="icone facebook" />
             </a>
           </li>
